--- a/index.html
+++ b/index.html
@@ -9,6 +9,231 @@
   <title>Document</title>
 </head>
 <body>
-  
+  <header>
+    <article>
+      <h3>
+        Awesome
+      </h3>
+      <nav>
+        <details>
+          <summary class="fa-solid fa-bars"></summary>
+        
+        <ul>
+          <li><a href="#features">Features</a></li>
+          <li><a href="#services">Services</a></li>
+          <li><a href="#call-action">Call to Action</a></li>
+          <li><a href="#about">About</a></li>
+          <li><a href="#testimonials">Testimonials</a></li>
+          <li><a href="#contact">Contact</a></li>
+        </ul>
+      </details>
+      </nav>
+    </article>
+
+    <article>
+      <h1>
+        Awesome Skyblue Blog
+      </h1>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam eum 
+        non quo expedita quod id atque saepe omnis ipsum laudantium.
+      </p>
+    </article>
+    <article>
+
+    </article>
+  </header>
+  <main>
+    <section id="features" class="features">
+      <h2>Features</h2>
+      <article>
+        <div>
+          <i class="fa-solid fa-mobile-screen-button"></i>
+          <h4>
+            Responsive Design
+          </h4>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam, placeat 
+            aliquid. Provident delectus quis mollitia natus quibusdam nostrum.
+          </p>
+        </div>
+        <div>
+          <i class="fa-solid fa-code"></i>
+          <h4>
+            Clean Code
+          </h4>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam, placeat 
+            aliquid. Provident delectus quis mollitia natus quibusdam nostrum.
+          </p>
+        </div>
+        <div>
+          <i class="fa-solid fa-life-ring"></i>
+          <h4>
+            24/7 Support
+          </h4>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam, placeat 
+            aliquid. Provident delectus quis mollitia natus quibusdam nostrum.
+          </p>
+        </div>
+        <div>
+          <i class="fa-solid fa-pencil"></i>
+          <h4>
+            Modern Design
+          </h4>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam, placeat 
+            aliquid. Provident delectus quis mollitia natus quibusdam nostrum.
+          </p>
+        </div>
+      </article>
+    </section>
+    <section id="computer" class="computer">
+      <article>
+        <img src="./img/dashboard-img.jpg" alt="Laptop">
+      </article>
+      <article>
+        <div>
+          <i class="fa-solid fa-rocket"></i>
+          <aside>
+            <h3>Quick Install</h3>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
+              Corporis at dolore illo accusantium! Quo error voluptatibus 
+              et fugit.
+            </p>
+          </aside>
+        </div>
+        <div>
+          <i class="fa-solid fa-rocket"></i>
+          <aside>
+            <h3>Quick Install</h3>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
+              Corporis at dolore illo accusantium! Quo error voluptatibus 
+              et fugit.
+            </p>
+          </aside>
+        </div>
+      </article>
+
+    </section>
+    <section id="services" class="services">
+      <h2>Services</h2>
+      <article>
+        <i class="fa-solid fa-life-ring"></i>
+        <h3>
+          24/7 support
+        </h3>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Non sunt dolor corr
+          upti quidem veritatis autem voluptatem molestiae consectetur?
+        </p>
+      </article>
+      <article>
+        <i class="fa-solid fa-rocket"></i>
+        <h3>
+          Quick Install
+        </h3>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Non sunt dolor corr
+          upti quidem veritatis autem voluptatem molestiae consectetur?
+        </p>
+      </article>
+      <article>
+        <i class="fa-solid fa-gears"></i>
+        <h3>
+         Easy to Customise
+        </h3>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Non sunt dolor corr
+          upti quidem veritatis autem voluptatem molestiae consectetur?
+        </p>
+      </article>
+      <article>
+        <i class="fa-solid fa-life-ring"></i>
+        <h3>
+          Another Future
+        </h3>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Non sunt dolor corr
+          upti quidem veritatis autem voluptatem molestiae consectetur?
+        </p>
+      </article>
+      <article>
+        <i class="fa-solid fa-rocket"></i>
+        <h3>
+          7/24 Support
+        </h3>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Non sunt dolor corr
+          upti quidem veritatis autem voluptatem molestiae consectetur?
+        </p>
+      </article>
+      <article>
+        <i class="fa-solid fa-wand-magic-sparkles"></i>
+        <h3>
+          Quick Install
+        </h3>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Non sunt dolor corr
+          upti quidem veritatis autem voluptatem molestiae consectetur?
+        </p>
+      </article>
+
+    </section>
+    <section id="call-action" class="call-action">
+      <h2>Call to Action</h2>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore 
+        totam, sequi esse harum voluptas optio fugit minus molestiae?
+      </p>
+    </section>
+    <section id="about" class="about">
+      <h2>
+        About Us
+      </h2>
+      <div>
+        <figure>
+          <img src="./img/1.jpg" alt="Pic 01">
+          <figcaption> 
+            Jonh Doe
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis.</p>
+          </figcaption>
+        </figure>
+        <figure>
+          <img src="./img/2.jpg" alt="Pic 01">
+          <figcaption> 
+            Jonh Doe
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis.</p>
+          </figcaption>
+        </figure>
+        <figure>
+          <img src="./img/3.jpg" alt="Pic 01">
+          <figcaption> 
+            Jonh Doe
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis.</p>
+          </figcaption>
+        </figure>
+      </div>
+    </section>
+
+    <section id="testimonials" class="testimonials">
+      <h2>Testimonial</h2>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure neque, laborum 
+        qui molestiae corrupti, modi dignissimos ipsam doloremque sed aliquam provident
+         vel aspernatur voluptatibus odio tenetur soluta totam. Quia illo porro esse.
+        </p>
+    </section>
+  </main>
+
+  <footer id="contact" class="contact">
+    <div>
+      <i class="fa-brands fa-facebook-f"></i>
+      <i class="fa-regular fa-globe"></i>
+      <i class="fa-brands fa-twitter"></i>
+      <i class="fa-brands fa-instagram"></i>
+      <i class="fa-brands fa-google-plus-g"></i>
+      <i class="fa-brands fa-pinterest"></i>
+    </div>
+    <span>
+      &copy; Import Blog by <a href="#">Skyblue Stock</a>
+    </span>
+  </footer>
 </body>
 </html>
