--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     </section>
     <section id="computer" class="computer">
       <article>
-        <img src="./img/dashboard-img.jpg" alt="Laptop">
+        <img src="./img/laptop.png" alt="Laptop">
       </article>
       <article>
         <div>
@@ -215,21 +215,22 @@
 
     <section id="testimonials" class="testimonials">
       <h2>Testimonial</h2>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure neque, laborum 
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure neque, laborum 
         qui molestiae corrupti, modi dignissimos ipsam doloremque sed aliquam provident
          vel aspernatur voluptatibus odio tenetur soluta totam. Quia illo porro esse.
-        </p>
+      </p>
     </section>
   </main>
 
-  <footer id="contact" class="contact">
+  <footer id="contact">
     <div>
-      <i class="fa-brands fa-facebook-f"></i>
-      <i class="fa-regular fa-globe"></i>
-      <i class="fa-brands fa-twitter"></i>
-      <i class="fa-brands fa-instagram"></i>
-      <i class="fa-brands fa-google-plus-g"></i>
-      <i class="fa-brands fa-pinterest"></i>
+      <a href="#" class="fa-brands fa-facebook-f"></a>
+      <a href="#" class="fa-solid fa-globe"></a>
+      <a href="#" class="fa-brands fa-twitter"></a>
+      <a href="#" class="fa-brands fa-instagram"></a>
+      <a href="#" class="fa-brands fa-google-plus-g"></a>
+      <a href="#" class="fa-brands fa-pinterest"></a>
     </div>
     <span>
       &copy; Import Blog by <a href="#">Skyblue Stock</a>
