--- a/index.html
+++ b/index.html
@@ -27,6 +27,14 @@
           <li><a href="#contact">Contact</a></li>
         </ul>
       </details>
+      <ul>
+        <li><a href="#features">Features</a></li>
+        <li><a href="#services">Services</a></li>
+        <li><a href="#call-action">Call to Action</a></li>
+        <li><a href="#about">About</a></li>
+        <li><a href="#testimonials">Testimonials</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
       </nav>
     </article>
 
